--- a/rro_overlays/FrameworksResOverlayLava/res/values/dimens.xml
+++ b/rro_overlays/FrameworksResOverlayLava/res/values/dimens.xml
@@ -17,10 +17,17 @@
 */
 -->
 
- <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius_bottom">90.0px</dimen>
+    <!-- Height of the status bar -->
+    <dimen name="status_bar_height_default">30dip</dimen>
+    <dimen name="status_bar_height_portrait">30dip</dimen>
+    <dimen name="status_bar_height_landscape">30dip</dimen>
+
+    <!-- Radius of the software rounded corners at the top of the display in its natural
+        orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_top">95.0px</dimen>
- 
- </resources>
+    <!-- Radius of the software rounded corners at the bottom of the display in its natural
+        orientation. If zero, the value of rounded_corner_radius is used. -->
+    <dimen name="rounded_corner_radius_bottom">90.0px</dimen>
+</resources>
